# Opdracht-3-MQTT

./: CMakeLists.txt  main.c  readme.md  readme.txt  sub.c
client/: CMakeLists.txt  MQTTClient_publish.c  MQTTPUB
server/: CMakeLists.txt  main.c  readme.md  readme.txt  sub.c
server/site/: site.c
site/: CMakeLists.txt  site.c
